--- a/example/index.html
+++ b/example/index.html
@@ -22,6 +22,6 @@
 		</div>
 	</body>
 
-	<script src="../src/main.js" type="module"></script>
+	<script src="./main.js" type="module"></script>
 
 </html>
